assets/css/main.css
/* =========================
   Global Reset & Variables
   ========================= */

:root {
  --max-width: 1100px;
  --line-height: 1.6;

  --color-text: #f5fbef;
  --color-muted: #051919;
  --color-bg: #092b2b;
  --color-border: #c59849;
  --color-accent: #2c0109;
  --color-gray: #474747;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  font-size: 18px;
}

body {
  margin: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont,
               "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
  line-height: var(--line-height);
  color: var(--color-text);
  background: var(--color-bg);
}

/* =========================
   Layout
   ========================= */

header {
  max-width: 1100px;
  padding-top: 1rem;
  margin: 0 auto;
}

main {
  max-width: 1100px;
  padding-top: 0rem;
  margin: 0 auto;
}

footer {
  max-width: 1100px;
  padding-top: 1rem;
  margin: 0 auto;
}

header nav {
  display: flex;
  gap: 1rem;
  font-weight: 500;
}

header a {
  text-decoration: none;
  color: var(--color-text);
}

header a:hover {
  text-decoration: underline;
}

footer {
  display: flex;
  font-size: 0.875rem;
  color: var(--color-muted);
  justify-content: center;
}

/* =========================
   Typography
   ========================= */

h1,
h2,
h3 {
  line-height: 1.2;
  margin-top: 0;
}

h1 {
  font-size: 2.2rem;
  margin-bottom: 1.5rem;
}

h2 {
  font-size: 1.6rem;
  margin-top: 3rem;
  margin-bottom: 1rem;
}

p {
  max-width: var(--max-width);
  padding: 0;
}

ul {
  max-width: var(--max-width);
  padding-left: 1.25rem;
}

li {
  margin-bottom: 0.5rem;
}

/* =========================
   Content
   ========================= */

article {
  margin-top: 0rem;
}

figure {
  margin: 0rem;
}

.content {
  margin-top: 2rem;
}

/* =========================
   Metadata Blocks
   ========================= */

article ul {
  list-style: none;
  padding: 0;
  margin: 1.5rem 0;
  border-top: 1px solid var(--color-border);
  border-bottom: 1px solid var(--color-border);
}

article li {
  display: flex;
  gap: 0.5rem;
  font-size: 0.95rem;
}
/* =========================
   Project Pages
   ========================= */

.project-header {
  margin-bottom: 2rem;
}

/* =========================
   Content Blocks
   ========================= */

.project-content > * {
  margin-bottom: 0rem;
}

.project-section {
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-template-rows: 1fr;
  grid-template-areas: "text image";
  gap: 1rem;
  align-items: start;
  place-items: center;
  max-width: var(--max-width);
}

.project-section.reverse {
  grid-template-columns: 1fr 3fr;
  grid-template-rows: 1fr;
  grid-template-areas: "image text";
}

.project-section-text {
  grid-area: text;
  margin: 1rem 0;
}

.project-section-image {
  grid-area: image;
  margin: 1rem 0;
}

.project-section-image img {
  display: block;
  width: 100%;
  height: auto;
  padding: 0;
  border: 2px solid var(--color-border);
  background: var(--color-bg);
}

.project-section-caption {
  color: var(--color-muted);
  font-size: 12px;
}

/* =========================
   Image Blocks
   ========================= */

.project-image{
  max-width: var(--max-width);
  margin: 1rem 0;
}

.project-image img{
  display: block;
  width: 100%;
  height: auto;
  border: 1px solid var(--color-border);
  background: var(--color-bg);
  margin: 2rem 0;
}

.project-image p {
  margin: 0;
  padding: 0;
  max-width: none;
}

/* Mobile */
@media (max-width: 800px) {
  .project-section {
    grid-template-columns: 1fr;
  }
}

/* =========================
   Homepage Blocks
   ========================= */

/* Hero */

.home-hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 1rem;
  background-color: var(--color-muted);
}

.home-hero-header {
  width: 100%;
  background-color: var(--color-gray);
}

.home-hero-area {
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-template-rows: 1fr;
  grid-template-areas: "content image";
  gap: 1rem;
}

.home-hero-content {
  grid-area: content;
  margin: 1rem;
}

.home-hero-image {
  grid-area: image;
  margin: 1rem;
}

.home-hero-image img {
  display: block;
  width: 100%;
  height: auto;
  border: 2px solid var(--color-border);
  background: var(--color-bg);
}

/* Services Grid */

.services-grid {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  text-align: center;
  gap: 1rem;
  background-color: var(--color-muted);
}

.services-grid-header {
  width: 100%;
  background-color: var(--color-gray);
}

.services-grid-items {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 2rem;
  padding: 1rem;
}

.service-item {
  border: 2px solid var(--color-border);
  padding: 1rem;
  background-color: var(--color-accent);
}

.service-item img {
  width: 50px;
  height: 50px;
  margin-top: 1rem;
}

